# PlayingCardsCPPThreadsafe

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.am  README.md  configure.ac
.github/workflows/: cmake.yml
includes/: cards.h  common.h  functional.h  progbar.h
src/: cards.cc  cards.cpp  functional.cc  main.cc  main.cpp
src/aux/: progbar.cc  progbar.cpp
unittest/: cardstest.cc
