AM_CPPFLAGS = "-I${top_srcdir}/includes -I${top_srcdir}PlayingCardsCore/includes"
AM_CXXFLAGS = -std=c++14

playingcardsthreadsafe_SOURCES = src/main.cpp 
                                 PlayingCardsCore/src/cards.cpp 
                                 PlayingCardsCore/src/aux/progbar.cpp

bin_PROGRAMS = playingcardsthreadsafe
